# cdbk

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.tasks/: 20260625-151415-931-n6-971.md  20260625-180218-804-n6-581.md  20260625-191810-745-n6-308.md  20260628-152101-496-n6-468.md
src/: locations.rs  main.rs  manifest.rs
src/cmd/: extract.rs  install.rs  list.rs  mod.rs  open.rs  package.rs  remove.rs  setup.rs  uninstall.rs
src/resources/: cdbk.desktop  x-cdbk.xml
src/resources/ui/: window.slint
testbundle/: manifest.toml  test.sh
