[package]
name = "cdbk"
version = "0.1.1"
edition = "2024"

license = "MIT"
authors = ["chickencuber"]
repository = "https://github.com/chickencuber/cdbk"
description = "a way to bundle apps for linux"

[dependencies]
zip = "8.6.0"
toml = "1.1.2"
serde = {version="1.0.228", features=["derive"]}

cmdparsing = "2.2.6"
dirs = "6.0.0"
tt-call="1.0.9"
tt-equal="0.1.2"

relm4 = "0.11.0"

fs_extra = "1.3.0"
